# deploy

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  railway.toml  requirements.txt
Ai-Chatbot/: .env.example  .gitignore  README.md  requirements.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_mvp_tables.py  d4a41aec02af_add_integration_credentials.py
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/ai/: __init__.py
backend/app/ai/running_coach/: __init__.py  context_loader.py  graph.py  prompts.py  providers.py  safety.py  schemas.py  service.py  tools.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  admin.py  ai.py  calendar.py  dashboard.py  insights.py  integrations.py  profiles.py  router.py  training.py
backend/app/core/: __init__.py  config.py  pagination.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/services/: ai_agent.py  ai_context.py  langfuse_tracing.py  llm_provider.py  strava.py
backend/evals/: running_coach_cases.jsonl
backend/routers/: chat.py  products.py
backend/scripts/: evaluate_running_coach.py  seed_dev.py
backend/tests/: conftest.py  test_ai_agent.py  test_api.py  test_running_coach_context_loader.py  test_running_coach_integration.py  test_running_coach_response.py  test_running_coach_safety.py  test_running_coach_tools.py
scripts/: _pyrun.sh  (+1 more)
(+770 files in other folders)
