[project]
name = "slabai-backend"
version = "0.1.0"
description = "SLABAI Backend MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "langchain>=0.2.11",
  "langchain-core>=0.2.26",
  "langchain-openai>=0.1.19",
  "langgraph>=0.1.15",
  "langfuse>=2.39.0",
  "pydantic>=2.8.2",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.4.0",
  "pyjwt[crypto]>=2.8.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "mypy>=1.11.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.5"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_ignores = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
